collapsed menu fix

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -49,7 +49,7 @@ header {
   z-index: 10;
 }
 
-#name {
+#navname {
   margin: 0;
   height: 100%;
   background-color: #4aaaa5;
@@ -70,7 +70,7 @@ header {
 }
 
 .lastLink {
-  border-right: 0px;
+  float: right;
 }
 
 .box_header {
